--- a/public/styles.css
+++ b/public/styles.css
@@ -74,6 +74,10 @@ li {
 #mygithub {
   color: var(--koromiko)
 }
+
+#gitbotresponse {
+  padding: 20px;
+}
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
   display: table;
